; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_1234.c_comun.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/remote/extr_1234.c_comun.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"/usr/bin/telnet\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"30464\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @comun(i8* %0, i32 %1) #0 {
  %3 = alloca %struct.sockaddr_in, align 4
  %4 = alloca i8*, align 8
  %5 = alloca [4 x i8*], align 16
  %6 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %3, i32 0, i32 0
  store i32 %1, i32* %6, align 4
  store i8* %0, i8** %4, align 8
  %7 = getelementptr inbounds [4 x i8*], [4 x i8*]* %5, i64 0, i64 0
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8** %7, align 8
  %8 = getelementptr inbounds i8*, i8** %7, i64 1
  %9 = load i8*, i8** %4, align 8
  store i8* %9, i8** %8, align 8
  %10 = getelementptr inbounds i8*, i8** %8, i64 1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %10, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 1
  store i8* null, i8** %11, align 8
  %12 = getelementptr inbounds [4 x i8*], [4 x i8*]* %5, i64 0, i64 0
  %13 = load i8*, i8** %12, align 16
  %14 = getelementptr inbounds [4 x i8*], [4 x i8*]* %5, i64 0, i64 0
  %15 = call i32 @execve(i8* %13, i8** %14, i32* null)
  ret i32 0
}

declare dso_local i32 @execve(i8*, i8**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
